Blender crash on 2d painting without active object (also drawing asserts) #69957

Closed
opened 2019-09-16 18:44:03 +02:00 by Tommi Hyppänen · 8 comments

System Information
Operating system: Windows 10 64-bit, latest automatic updates
Graphics card: MSI Nvidia RTX 2070

Blender Version
Broken: Latest from Git, September 16th, 2019. Also recent 2.81 from blender.org
Worked: none

Short description of error
Error reason:

Exception thrown: read access violation.
vc.obact was nullptr.

Crash location:

paint_cursor.c, line 1311

/* Only sculpt mode cursor for now */
/* Disable for PBVH_GRIDS */

SculptSession *ss = vc.obact->sculpt;

bool is_multires = ss && ss->pbvh && BKE_pbvh_type(ss->pbvh) == PBVH_GRIDS;
if ((mode == PAINT_MODE_SCULPT) && ss && !is_multires &&

Call stack:

blender.exe!paint_draw_cursor(bContext * C, int x, int y, void * UNUSED_unused) Line 1289 C
blender.exe!wm_paintcursor_draw(bContext * C, ScrArea * sa, ARegion * ar) Line 117 C
blender.exe!wm_draw_window_onscreen(bContext * C, wmWindow * win, int view) Line 720 C
blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 774 C
blender.exe!wm_draw_update(bContext * C) Line 951 C
blender.exe!WM_main(bContext * C) Line 424 C
blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 493 C
[External Code]

Exact steps for others to reproduce the error
leafy.blend
Load included .blend file, move cursor to image editor area

Probably related: #69948

**System Information** Operating system: Windows 10 64-bit, latest automatic updates Graphics card: MSI Nvidia RTX 2070 **Blender Version** Broken: Latest from Git, September 16th, 2019. Also recent 2.81 from blender.org Worked: none **Short description of error** Error reason: -- Exception thrown: read access violation. vc.**obact** was nullptr. Crash location: -- paint_cursor.c, line 1311 ``` /* Only sculpt mode cursor for now */ ``` ``` /* Disable for PBVH_GRIDS */ ``` > SculptSession *ss = vc.obact->sculpt; ``` bool is_multires = ss && ss->pbvh && BKE_pbvh_type(ss->pbvh) == PBVH_GRIDS; ``` ``` if ((mode == PAINT_MODE_SCULPT) && ss && !is_multires && ``` Call stack: -- blender.exe!paint_draw_cursor(bContext * C, int x, int y, void * UNUSED_unused) Line 1289 C blender.exe!wm_paintcursor_draw(bContext * C, ScrArea * sa, ARegion * ar) Line 117 C blender.exe!wm_draw_window_onscreen(bContext * C, wmWindow * win, int view) Line 720 C blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 774 C blender.exe!wm_draw_update(bContext * C) Line 951 C blender.exe!WM_main(bContext * C) Line 424 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 493 C [External Code] **Exact steps for others to reproduce the error** [leafy.blend](https://archive.blender.org/developer/F7751362/leafy.blend) Load included .blend file, move cursor to image editor area Probably related: #69948

Added subscriber: @TommiHyppanen

Added subscriber: @TommiHyppanen
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-09-17 10:13:30 +02:00
Philipp Oeser changed title from Blender crash on loading .blend and mousing over Image Editor area to Blender crash on 2d painting without active object (also drawing asserts) 2019-09-17 11:34:56 +02:00
Member

Added subscribers: @PabloDobarro, @Jeroen-Bakker

Added subscribers: @PabloDobarro, @Jeroen-Bakker
Member

would consider this High prio actually
CC @Jeroen-Bakker
CC @PabloDobarro

would consider this High prio actually CC @Jeroen-Bakker CC @PabloDobarro

I tested the newest from Git, and the issue seems resolved.

I tested the newest from Git, and the issue seems resolved.
Member

Since the crash is fixed in 41d6d1463f, will lower the prio [and D5836 is about to go in as well...]

Since the crash is fixed in 41d6d1463f, will lower the prio [and [D5836](https://archive.blender.org/developer/D5836) is about to go in as well...]
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Since the drawing asserts are now also solved in 078fcc6253, will close...

Since the drawing asserts are now also solved in 078fcc6253, will close...
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69957
No description provided.